# myZenodo

./: .gitignore  README.md  pyproject.toml
src/myZenodo/: utility.py  zenodo.py
