[build-system]
requires = ["setuptools>=61.0", "requests>=2.22.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myZenodo"
version = "0.1"
authors = [
  { name="Adam T. Kocsis", email="adam.t.kocsis@gmail.com" },
]
description = "Utility functions for the ZENODO restful API."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Research",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]